fixed z-indexes

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,9 @@
   flex-wrap: nowrap;
 }
 
-*
- {
-   overflow:hidden;
- }
+body{
+  overflow-x: hidden;
+}
 
 .flex-itm {
   
@@ -16,6 +15,7 @@
   color:black;
   margin: 5px;
   padding: 15px;
+  
 }
 #header {
  
@@ -48,6 +48,7 @@
 #logo {
   display: flex;
   justify-content: center;
+  z-index: 10;
  
 }
 .box-logo {
@@ -62,6 +63,7 @@
   
   justify-content: center;
   flex-direction: row;
+  z-index: 10;
 }
 #search {
   border-radius: 30px;
@@ -113,6 +115,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    
     }
     .btn-searh-google{
     width: 135px;
@@ -123,6 +126,7 @@
     cursor: pointer;
     border-radius: 5px;
     opacity: 0.8;
+    z-index: 10;
     }
     .main-btn-block{
     display: flex;
@@ -148,7 +152,7 @@ a.lang:hover{
 }
 
 #footer {
-    position: fixed; 
+    position: absolute; 
     left: 0; bottom: 0; 
     padding: 10px;
     background:#f2f2f2; 
